feat: added new update to the kits lifecyle

--- a/documentation/kit-getting-started.mdx
+++ b/documentation/kit-getting-started.mdx
@@ -529,7 +529,7 @@ Congratulations! Your KIT is now part of the Eclipse Tractus-X ecosystem!
 
 ### Documentation References
 
-- [TRG 9.02 KIT Maturity Levels](./kit-maturity-levels)
+- [TRG 9.02 KIT Maturity Levels](./kit-lifecycle)
 - [TRG 9.03 KIT Framework](./kit-framework)
 - [Tractus-X Developer Hub](https://eclipse-tractusx.github.io/docs/developer)
 - [Community Guidelines](https://eclipse-tractusx.github.io/community)
