--- a/documentation/kit-lifecycle.mdx
+++ b/documentation/kit-lifecycle.mdx
@@ -1,5 +1,5 @@
 ---
-title: KIT Maturity Levels
+title: KIT Lifecycle
 ---
 {/*
  * Copyright (c) 2025 Contributors to the Eclipse Foundation
@@ -168,9 +168,9 @@ export const MaturityLevelSection = ({ title, icon, description, kits, color }) 
   );
 };
 
-## KIT Maturity Levels Framework
+## KIT Lifecycle Framework
 
-The Tractus-X KIT ecosystem uses a comprehensive maturity framework to ensure quality, completeness, and real-world validation. KITs progress through distinct maturity levels: **Sandbox**, **Incubating** (with three sub-states), and **Graduated**.
+The Tractus-X KIT ecosystem uses a comprehensive lifecycle framework to ensure quality, completeness, and real-world validation. KITs progress through distinct lifecycle stages: **Sandbox**, **Incubating** (with three sub-states), and **Graduated**.
 
 ### Maturity Level Overview
 
@@ -213,21 +213,18 @@ Incubating represents the active development phase where KITs evolve from concep
 
 - **Focus**: Initial development and structure setup
 - **Activities**: Basic artifact creation, initial documentation, architecture planning
-- **Duration**: Typically 2-4 weeks
 - **Deliverables**: Core documentation framework, basic API specifications
 
 #### <DeveloperModeIcon sx={{ fontSize: 20, color: '#3b82f6', marginRight: '6px', verticalAlign: 'middle' }} /> In Progress State
 
 - **Focus**: Active implementation and content development
 - **Activities**: Full artifact development, implementation work, testing
-- **Duration**: Variable based on KIT complexity (4-12 weeks)
 - **Deliverables**: Complete documentation, working implementations, test cases
 
 #### <VisibilityIcon sx={{ fontSize: 20, color: '#8b5cf6', marginRight: '6px', verticalAlign: 'middle' }} /> In Review State
 
 - **Focus**: Quality assurance and community review
 - **Activities**: Peer review, quality validation, compliance checking
-- **Duration**: 2-3 weeks
 - **Deliverables**: Reviewed and approved artifacts, feedback incorporation
 
 ### <SchoolIcon sx={{ fontSize: 24, color: '#10b981', marginRight: '8px', verticalAlign: 'middle' }} /> Graduated Level
@@ -243,9 +240,9 @@ Graduated is the highest maturity level, indicating that the KIT has passed comp
 - Expert testing and approval completed
 - Production-ready with proven business value
 
-## Current KIT Portfolio by Maturity Level
+## Current KIT Portfolio by Lifecycle Stage
 
-The following sections display all KITs organized by their current maturity level, providing a comprehensive overview of the ecosystem's development status.
+The following sections display all KITs organized by their current lifecycle stage, providing a comprehensive overview of the ecosystem's development status.
 
 export const KitsByMaturityLevel = () => {
   // Collect all KITs from different categories
@@ -523,3 +520,155 @@ Gathered information thus far. A presentation of the main points validating the 
 ### Step 7: Validation
 
 ### Step 8: Publication
+
+## KIT Deprecation
+
+### Overview
+
+KIT deprecation is a structured process for phasing out KITs that are no longer maintained, have been superseded by newer solutions, or are no longer aligned with the Tractus-X ecosystem strategy. The deprecation process ensures that users and stakeholders have sufficient time to migrate to alternative solutions while maintaining transparency throughout the transition.
+
+### Reasons for Deprecation
+
+A KIT may be deprecated for one or more of the following reasons:
+
+1. **Technical Obsolescence**: The technology or approach has become outdated or is no longer best practice
+2. **Superseded by Another KIT**: A newer, more comprehensive KIT has been developed that covers the same use case
+3. **Lack of Maintenance**: The KIT is no longer actively maintained by its original contributors
+4. **Strategic Realignment**: The KIT no longer aligns with Tractus-X strategic priorities
+5. **Insufficient Adoption**: Limited or no community adoption despite being available for extended period
+6. **Security or Compliance Issues**: Critical issues that cannot be resolved without complete redesign
+
+### Deprecation Process
+
+#### Phase 1: Deprecation Announcement (Months 0-3)
+
+**Actions**:
+- Create deprecation notice issue in [eclipse-tractusx/sig-release](https://github.com/eclipse-tractusx/sig-release)
+- Update KIT documentation with clear deprecation banner and timeline
+- Add "DEPRECATED" label to the KIT in the master data
+- Communicate deprecation through:
+  - Official blog post on [Tractus-X website](/blog)
+  - Matrix chat announcements in [#tractusx-kits channel](https://chat.eclipse.org/#/room/#tractusx-kits:matrix.eclipse.org)
+  - Office hours presentations
+  - Email notifications to known adopters (if identifiable)
+
+**Required Information**:
+- Reason for deprecation
+- Deprecation timeline with key milestones
+- Alternative KITs or migration paths (if available)
+- Support end date
+- Final removal date
+- Contact points for questions
+
+#### Phase 2: Active Deprecation Period (Months 3-12)
+
+**Actions**:
+- Maintain documentation in read-only mode
+- Provide critical security updates only (if feasible)
+- Update all references to recommend alternative solutions
+- Host migration support office hours (if significant adoption exists)
+- Document common migration patterns and solutions
+
+**Support Level**:
+- No new features or enhancements
+- Critical security fixes only (best effort)
+- Community support through existing channels
+- Migration assistance through office hours
+
+#### Phase 3: End of Life (Month 12+)
+
+**Actions**:
+- Move KIT documentation to archived section
+- Update all cross-references to point to alternatives
+- Archive related repositories (set to read-only)
+- Final communication to community
+- Remove from active KIT listings (maintain in deprecated/archived section)
+
+**Post-EOL**:
+- Documentation remains accessible in archived state
+- Repositories remain accessible but read-only
+- No support provided
+- Clear warnings on all pages indicating EOL status
+
+### Deprecation Communication Requirements
+
+All deprecated KITs must display a prominent deprecation notice with the following information:
+
+```mdx
+:::danger KIT Deprecated
+This KIT has been deprecated as of [DATE] and will reach end of life on [DATE].
+
+**Reason**: [Brief explanation]
+
+**Alternative Solutions**: 
+- [Link to replacement KIT or alternative approach]
+
+**Migration Guide**: [Link to migration documentation if available]
+
+**Support**: Critical security fixes only until [DATE]. For questions, contact [contact info].
+:::
+```
+
+### Migration Support
+
+For KITs with known active adoption, the deprecation process should include:
+
+1. **Migration Documentation**: Clear guide on how to transition to alternative solutions
+2. **Migration Timeline**: Recommended milestones for users to complete migration
+3. **Office Hours**: Dedicated sessions to answer migration questions
+4. **Community Forum**: Dedicated discussion thread for migration-related questions
+5. **Case Studies**: Examples of successful migrations (if available)
+
+### Deprecated KIT Archive
+
+Deprecated KITs are maintained in a dedicated archive section with:
+
+- Complete historical documentation (read-only)
+- Deprecation notice and timeline
+- Links to alternative solutions
+- Archive date and reason for deprecation
+- Contact information for historical inquiries
+
+### Responsibilities
+
+**KIT Maintainers**:
+- Initiate deprecation proposal with justification
+- Support migration during active deprecation period
+- Update documentation with deprecation notices
+- Provide migration guidance and support
+
+**Committers**:
+- Review and approve deprecation proposals
+- Ensure proper communication and timeline
+- Validate deprecation notices are properly displayed
+- Coordinate with SIG-Release for official announcements
+
+**Community**:
+- Provide feedback on deprecation plans
+- Share migration experiences
+- Support other users during transition period
+
+### Appeal Process
+
+If community members believe a KIT should not be deprecated, they can:
+
+1. Submit an appeal issue to [sig-release](https://github.com/eclipse-tractusx/sig-release)
+2. Provide evidence of:
+   - Active usage and adoption
+   - Community commitment to maintain the KIT
+   - Strategic value to the ecosystem
+   - Resources available for ongoing maintenance
+3. Present the appeal in an open planning or office hours session
+4. Committers review and make final decision within 30 days
+
+### Example Deprecation Timeline
+
+| Timeframe | Milestone | Actions |
+|-----------|-----------|---------|
+| Month 0 | Deprecation Announced | Notice published, documentation updated, community informed |
+| Month 1-3 | Initial Transition | Migration guides published, office hours scheduled |
+| Month 3-6 | Active Migration | Community migration support, common issues documented |
+| Month 6-9 | Final Transition | Support winds down, final warnings issued |
+| Month 9-12 | Pre-EOL | Critical fixes only, final migration push |
+| Month 12+ | End of Life | Documentation archived, repositories read-only |
+```
