feat: fixed bug and introduced automatization of kit nav bar

--- a/documentation/kit-lifecycle.mdx
+++ b/documentation/kit-lifecycle.mdx
@@ -184,6 +184,12 @@ graph TD
     B1 --> B2
     B2 --> B3
     B3 --> C[Graduated]
+    A -.-> D[Deprecated]
+    B -.-> D
+    B1 -.-> D
+    B2 -.-> D
+    B3 -.-> D
+    C -.-> D
 
 ```
 
