--- a/documentation/kit-framework.mdx
+++ b/documentation/kit-framework.mdx
@@ -37,6 +37,48 @@ KITs are structured around different views, each targeting specific stakeholders
 
 <KitStructureTable />
 
+## COPYRIGHT NOTICE
+
+Mandatory for every KIT, It **MUST** be included in every file (not just on the adoption view!).
+KIT documentation works under the CC-BY-4.0 license. Therefore you need to add the "notice" part to make transparent which companies worked on this KIT.
+It **MUST** always include the `- SPDX-FileCopyrightText: 2025 Contributors to the Eclipse Foundation` copyright statement.
+
+`Example:`
+
+```
+## NOTICE
+
+This work is licensed under the [CC-BY-4.0](https://creativecommons.org/licenses/by/4.0/legalcode).
+
+- SPDX-License-Identifier: CC-BY-4.0
+- SPDX-FileCopyrightText: 2025 <Your Company FullName>
+- SPDX-FileCopyrightText: 2023, 2025 ZF Friedrichshafen AG
+- SPDX-FileCopyrightText: 2023, 2025 Bayerische Motoren Werke Aktiengesellschaft (BMW AG)
+- SPDX-FileCopyrightText: 2023, 2025 SAP SE
+- SPDX-FileCopyrightText: 2023, 2025 Volkswagen AG
+- SPDX-FileCopyrightText: 2023, 2025 Robert Bosch GmbH
+- SPDX-FileCopyrightText: 2023, 2025 Mercedes Benz Group
+- SPDX-FileCopyrightText: 2023, 2025 BASF SE
+- SPDX-FileCopyrightText: 2023, 2025 Schaeffler AG
+- SPDX-FileCopyrightText: 2023, 2025 Contributors to the Eclipse Foundation
+- Source URL: [Source Code](https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/)
+```
+
+In case its a new KIT the year can be referenced like that:
+
+`Example:`
+```
+## NOTICE
+
+This work is licensed under the [CC-BY-4.0](https://creativecommons.org/licenses/by/4.0/legalcode).
+
+- SPDX-License-Identifier: CC-BY-4.0
+- SPDX-FileCopyrightText: 2025 <Your Company FullName>
+- SPDX-FileCopyrightText: 2025 Bayerische Motoren Werke Aktiengesellschaft (BMW AG)
+- SPDX-FileCopyrightText: 2025 Contributors to the Eclipse Foundation
+- Source URL: [Source Code](https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/)
+```
+
 ## CHANGELOG
 
 To achieve uniformity, we use [semantic versioning](https://semver.org/). Concrete examples in our already published [KITs](https://eclipse-tractusx.github.io/Kits).
@@ -133,6 +175,9 @@ Deliverables:
 `Example from Traceability:`
 [Traceability Semantic Models](https://eclipse-tractusx.github.io/docs-kits/kits/traceability-kit/adoption-view#semantic-models)
 
+> [!WARNING]
+> If there is a dataspace specific semantic model, please include it on the Dataspace Extensions Tab of from your Dataspace.
+
 ### Logic / Schema
 
 Mandatory for every KIT that is related to a use case + for the 'incubating' stage
@@ -147,31 +192,6 @@ Data sovereignty is one of the main principles of Catena-X and a major topic for
 - Business Architecture
 - Access & Usage Policies
 
-### Standards
-
-Mandatory for every KIT that wants to go to the 'incubating' stage
-Links to the relevant standards (Association Library). Add the relevant number of the standard, the name and version of the standard.
-`Example:`
-CX - 001 Standardname (Version 2.0)
-
-### Notice
-
-Mandatory for every KIT and all graduation stages
-KIT documentation works under the CC-BY-4.0 license. Therefore you need to add the "notice" part to make transparent which companies worked on this KIT.
-`Example:`
-This work is licensed under the [CC-BY-4.0](https://creativecommons.org/licenses/by/4.0/legalcode).
-
-- SPDX-License-Identifier: CC-BY-4.0
-- SPDX-FileCopyrightText: 2023,2024 ZF Friedrichshafen AG
-- SPDX-FileCopyrightText: 2023,2024 Bayerische Motoren Werke Aktiengesellschaft (BMW AG)
-- SPDX-FileCopyrightText: 2023,2024 SAP SE
-- SPDX-FileCopyrightText: 2023,2024 Volkswagen AG
-- SPDX-FileCopyrightText: 2023,2024 Robert Bosch GmbH
-- SPDX-FileCopyrightText: 2023,2024 Mercedes Benz Group
-- SPDX-FileCopyrightText: 2023,2024 BASF SE
-- SPDX-FileCopyrightText: 2023,2024 Schaeffler AG
-- SPDX-FileCopyrightText: 2023,2024 Contributors to the Eclipse Foundation
-- Source URL: [BPDM GitHub repository](https://github.com/eclipse-tractusx/bpdm)
 
 ## Development View
 
@@ -292,6 +312,13 @@ Dataspace Extensions enable KITs to support multiple dataspace ecosystems (such 
 - **Custom data models** tailored to the specific industry or domain requirements
 - **Dataspace standards** that may differ from generic implementations
 - **Compliance requirements** specific to regulatory or industry standards
+
+### Standards
+
+Mandatory for every KIT that wants to go to the 'incubating' stage
+Links to the relevant standards (Association Library). Add the relevant number of the standard, the name and version of the standard.
+`Example:`
+CX - 001 Standardname (Version 2.0)
 
 ### Structure and Implementation
 
