feat: added references to KIT NOTICE section

--- a/documentation/kit-framework.mdx
+++ b/documentation/kit-framework.mdx
@@ -187,7 +187,7 @@ Deliverables: Description
 ### Business Process
 
 Mandatory for every KIT that is related to a use case + for the 'incubating' stage
-Data sovereignty is one of the main principles of Catena-X and a major topic for the participants in the data space. This part should help to understand how the business process works and provides a blue print on how access & usage policies **could** look like.
+Data sovereignty is one of the main principles of Eclipse Tractus-X and a major topic for the participants in the data space. This part should help to understand how the business process works and provides a blue print on how access & usage policies **could** look like.
 
 - Business Architecture
 - Access & Usage Policies
@@ -211,7 +211,7 @@ Deliverables:
 - Whats the main focus of the API
 - Integration of the OpenAPI file
 - Use case examples for the API endpoints and how to use them
-`Example from DataChain KIT:` The API of the Item Relationship Service (IRS) for retrieving item graphs along the value chain of Catena-X partners.
+`Example from DataChain KIT:` The API of the Item Relationship Service (IRS) for retrieving item graphs along the value chain of Eclipse Tractus-X partners.
 [`Example for OpenAPI integration:`](/docs-kits/kits/business-partner-kit/software-development-view)
 
 ### Sample Data
@@ -238,7 +238,7 @@ Deliverable:
 
 ## Operations View
 
-... provides resources to deploy and operate centralized & decentralized Catena-X offerings in your IT environment (e.g., on-prem, cloud).
+... provides resources to deploy and operate centralized & decentralized Eclipse Tractus-X offerings in your IT environment (e.g., on-prem, cloud).
 Deliverables:
 **Quick Setup Guide / Installation Instructions**
 
