feat: fixed link on kit framework

--- a/documentation/kit-framework.mdx
+++ b/documentation/kit-framework.mdx
@@ -197,10 +197,10 @@ Data sovereignty is one of the main principles of Eclipse Tractus-X and a major 
 
 The development view provides developers with resources to accelerate the development of apps and services.
 
-### Architecture View
+### Architecture Overview
 
 The architecture view is an optional chapter. It offers an architecture perspective including the main building blocks and the runtime view. It can be extended with more architecture documentation like an ARC42.
-[`Example for an Architecture View:`](https://eclipse-tractusx.github.io/docs-kits/kits/traceability-kit/Architecture%20View%20Traceability%20Kit#scope-and-context).
+[`Example for an Architecture View/Overview:`](https://eclipse-tractusx.github.io/docs-kits/kits/data-trust-and-security-kit/software-development-view/overview).
 
 ### API Specifications
 
