feat: added office hour kits link correct

--- a/documentation/kit-getting-started.mdx
+++ b/documentation/kit-getting-started.mdx
@@ -306,7 +306,7 @@ You need to have a Github Account and to fulfill the requirements from the [Deve
 
 | Channel | Purpose | Link |
 |---------|---------|------|
-| KIT Community Office Hours | Weekly alignment meetings | [Join Meeting](https://eclipse-tractusx.github.io/community/open-meetings) |
+| KIT Community Office Hours | Weekly alignment meetings | [Join Meeting](https://eclipse-tractusx.github.io/community/open-meetings#Eclipse%20Tractus-X%20KITs%20Community%20Office%20Hour) |
 | Matrix Chat | Daily discussions & support | [#tractusx-kits:matrix.eclipse.org](https://chat.eclipse.org/#/room/#tractusx-kits:matrix.eclipse.org) |
 | GitHub Issues | Technical issues & bugs | [Create Issue](https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/issues) |
 | SIG-Release | Official KIT Release Tracking | [eclipse-tractusx/sig-release](https://github.com/eclipse-tractusx/sig-release) |
@@ -341,7 +341,7 @@ flowchart TD
 
 **Talk to the community about your KIT concept.**
 
-- **Office Hours**: Tuesdays at 10:00 AM CET - [Join here](https://eclipse-tractusx.github.io/community/open-meetings#general-office-hours)
+- **KIT Community Office Hours**: Tuesdays at 10:00 AM CET - [Join here](https://eclipse-tractusx.github.io/community/open-meetings#Eclipse%20Tractus-X%20KITs%20Community%20Office%20Hour)
 - **Matrix Chat**: [#tractusx-kits:matrix.eclipse.org](https://chat.eclipse.org/#/room/#tractusx-kits:matrix.eclipse.org)
 
 **What to bring**: Brief description of your use case and target audience.
