--- a/docs/release/trg-5/trg-5-05.md
+++ b/docs/release/trg-5/trg-5-05.md
@@ -2,10 +2,11 @@
 title: TRG 5.05 - Chart Values
 ---
 
-| Status | Created     | Post-History           |
-| ------ | ----------- | ---------------------- |
-| Update | 29-Feb-2024 | new examples and rules |
-| Active | 10-Nov-2022 | Initial release        |
+| Status | Created     | Post-History                               |
+| ------ | ----------- | ------------------------------------------ |
+| Update | 28-Oct-2025 | Migrate from Bitnami to Cloudpirates       |
+| Update | 29-Feb-2024 | new examples and rules                     |
+| Active | 10-Nov-2022 | Initial release                            |
 
 ## Why
 
@@ -28,7 +29,7 @@ A proper section for Container images **should** look like this:
 ```yaml
 image:
   registry: docker.io
-  repository: bitnami/postgresql
+  repository: postgres
   tag: ""
   digest: ""
   pullPolicy: IfNotPresent
