--- a/docs/release/trg-5/trg-5-07.md
+++ b/docs/release/trg-5/trg-5-07.md
@@ -2,11 +2,12 @@
 title: TRG 5.07 - Chart Dependencies
 ---
 
-| Status | Created     | Post-History              |
-|--------|-------------|---------------------------|
-| Update | 20-Sep-2023 | Adjust PostgreSQL version |
-| Active | 07-Mar-2023 |                           |
-| Draft  | 02-Dec-2022 | n/a                       |
+| Status | Created     | Post-History                                  |
+|--------|-------------|---------------------------------------------- |
+| Update | 28-Oct-2023 | Migrate from Bitnami to Cloudpirates          |
+| Update | 20-Sep-2023 | Adjust PostgreSQL version                     |
+| Active | 07-Mar-2023 |                                               |
+| Draft  | 02-Dec-2022 | n/a                                           |
 
 ## Why
 
@@ -22,11 +23,11 @@ An example dependency definition in the `Chart.yaml` file:
 
 ```yaml
 dependencies:
-  - condition: postgresql.enabled
+  - name: postgres
+    repository: oci://registry-1.docker.io/cloudpirates
+    version: 0.11.x
+    condition: postgresql.enabled
     alias: product-name-postgresql
-    name: postgresql
-    repository: https://charts.bitnami.com/bitnami
-    version: 12.x.x
 ```
 
 - Usage of condition, alias and version properties are optional but highly recommended
@@ -38,7 +39,7 @@ dependencies:
 The following commands have to run before installing the chart if it has dependencies:
 
 ```sh
-helm repo add [REPO_URL] #for example: https://charts.bitnami.com/bitnami
+helm repo add [REPO_URL] #for example: oci://registry-1.docker.io/cloudpirates
 helm dependency update
 ```
 
@@ -48,6 +49,6 @@ Then the install can be done with `helm install [NAME] [CHART] [flags]`
 
 The following table describes the required version of dependencies for all products. As Minor versions change rapidly, this guidance is not pinning a specifc version. Alignment also has to be coordinated across Teams through other communication means.
 
-| Name       | Repo URL                                      | Chart version | App version |
-|------------|-----------------------------------------------|:-------------:|:-----------:|
-| postgresql | [Bitnami](https://charts.bitnami.com/bitnami) |    12.x.x     |   15.x.x    |
+| Name     | Repo URL                                                         | Chart version | App version |
+|----------|------------------------------------------------------------------|:-------------:|:-----------:|
+| postgres | [Cloudpirates](https://registry-1.docker.io/cloudpirates)        |    0.11.x     |   18.x.x    |
